--- a/index.html
+++ b/index.html
@@ -3,105 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FFmpeg Web Converter</title>
+    <title>HTML5 Video Converter - Fast, Private, In-Browser Conversion</title>
+    <meta name="description" content="A blazing-fast, 100% client-side video converter using pure browser APIs. No dependencies, no uploads, instant loading. Convert to WebM/MP4, resize, and remove audio with zero compatibility issues.">
+    <meta name="keywords" content="html5 video converter, browser video converter, convert video online, no upload video converter, webm converter, mp4 converter, remove audio from video, client-side video, bros ai">
+    <link rel="canonical" href="https://bros-ai.github.io/video-optimizer-pro/">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="HTML5 Video Converter - Fast, Private, In-Browser">
+    <meta property="og:description" content="A blazing-fast, 100% client-side video converter using pure browser APIs. No dependencies, no uploads, instant loading.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bros-ai.github.io/video-optimizer-pro/">
+    <meta property="og:site_name" content="HTML5 Video Converter">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="HTML5 Video Converter - Fast, Private, In-Browser">
+    <meta name="twitter:description" content="A blazing-fast, 100% client-side video converter using pure browser APIs. No dependencies, no uploads, instant loading.">
+    <meta name="twitter:site" content="@GauthierBros">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>🎥 Media Converter</h1>
-        <div class="upload-section">
-            <input type="file" id="fileInput" accept="video/*,audio/*">
-            <label for="fileInput" class="file-label">
-                <span class="upload-icon">📁</span>
-                Choose Media File
-            </label>
-        </div>
+    <div class="app-container">
+        <!-- Header -->
+        <header class="header">
+            <h1>HTML5 Video Converter</h1>
+            <p>Fast, reliable, and 100% private conversion using your browser's built-in power.</p>
+        </header>
 
-        <div class="conversion-options" id="conversionOptions" style="display: none;">
-            <h3>Conversion Options</h3>
-            <div class="format-selection">
-                <label>
-                    <input type="radio" name="format" value="mp4" checked>
-                    MP4 (H.264)
-                </label>
-                <label>
-                    <input type="radio" name="format" value="webm">
-                    WebM
-                </label>
-                <label>
-                    <input type="radio" name="format" value="mp3">
-                    MP3 (Audio Only)
-                </label>
-                <label>
-                    <input type="radio" name="format" value="wav">
-                    WAV (Audio Only)
-                </label>
-            </div>
+        <!-- Main Content -->
+        <main class="main-content">
+            <!-- Upload Section -->
+            <section class="upload-section card">
+                <div class="upload-container" id="upload-container">
+                    <div class="upload-icon" aria-hidden="true">
+                        <svg height="48px" viewBox="0 0 24 24" width="48px" aria-label="Cloud upload icon"><path d="M0 0h24v24H0z" fill="none"/><path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"/></svg>
+                    </div>
+                    <h2>Drag & drop videos here</h2>
+                    <p>or</p>
+                    <label for="file-input" class="btn btn-primary">Browse Files</label>
+                    <input type="file" id="file-input" accept="video/*" multiple aria-label="Select video files">
+                </div>
+            </section>
 
-            <div class="quality-selection">
-                <label for="quality">Quality:</label>
-                <select id="quality">
-                    <option value="high">High Quality</option>
-                    <option value="medium" selected>Medium Quality</option>
-                    <option value="low">Low Quality</option>
-                </select>
-            </div>
+            <!-- Controls & Actions Section -->
+            <section class="controls-section card" id="controls-section" style="display: none;">
+                <div class="controls-grid">
+                    <!-- Dimensions Control -->
+                    <div class="control-group">
+                        <h3 class="control-title">Dimensions</h3>
+                        <div class="input-group">
+                            <div class="input-field">
+                                <label for="width-input">Width (px)</label>
+                                <input type="number" id="width-input" min="1" placeholder="e.g., 1280">
+                            </div>
+                            <div class="input-field">
+                                <label for="height-input">Height (px)</label>
+                                <input type="number" id="height-input" min="1" placeholder="e.g., 720">
+                            </div>
+                        </div>
+                        <label class="checkbox-label">
+                            <input type="checkbox" id="maintain-aspect-ratio" checked>
+                            <span class="checkmark"></span>
+                            Maintain aspect ratio
+                        </label>
+                    </div>
 
-            <button id="convertBtn" class="convert-btn">
-                <span class="btn-text">Convert</span>
-                <span class="btn-loader" style="display: none;">Converting...</span>
-            </button>
-        </div>
+                    <!-- Quality & Format Control -->
+                    <div class="control-group">
+                        <h3 class="control-title">Encoding & Format</h3>
+                        <div class="input-group">
+                             <div class="input-field">
+                                <label for="bitrate-select">Video Quality / Bitrate</label>
+                                <select id="bitrate-select">
+                                    <option value="8000000">High (8 Mbps)</option>
+                                    <option value="5000000" selected>Good (5 Mbps)</option>
+                                    <option value="2500000">Medium (2.5 Mbps)</option>
+                                    <option value="1000000">Low (1 Mbps)</option>
+                                </select>
+                            </div>
+                            <div class="input-field">
+                                <label for="format-select">Output Format</label>
+                                <select id="format-select">
+                                    <option value="video/webm">WebM (VP8/VP9)</option>
+                                    <option value="video/mp4">MP4 (H.264)*</option>
+                                </select>
+                                <small style="font-size: 0.75em; color: var(--secondary-color);">*MP4 support varies by browser</small>
+                            </div>
+                        </div>
+                         <label class="checkbox-label">
+                            <input type="checkbox" id="remove-audio">
+                            <span class="checkmark"></span>
+                            Remove audio
+                        </label>
+                    </div>
+                </div>
 
-        <div class="progress-section" id="progressSection" style="display: none;">
-            <div class="progress-bar">
-                <div class="progress-fill" id="progressFill"></div>
-            </div>
-            <div class="progress-text" id="progressText">0%</div>
-        </div>
+                <!-- Action Buttons -->
+                <div class="action-buttons">
+                    <button id="process-btn" class="btn btn-primary" disabled>Convert All Videos</button>
+                    <button id="reset-btn" class="btn btn-secondary">Reset</button>
+                </div>
+                <div id="error-message" class="error-message" role="alert"></div>
+            </section>
 
-        <div class="output-section" id="outputSection" style="display: none;">
-            <h3>Converted File</h3>
-            <div class="download-area">
-                <a id="downloadLink" class="download-btn" style="display: none;">
-                    <span class="download-icon">⬇️</span>
-                    Download Converted File
+            <!-- Video Queue Section -->
+            <section class="video-queue-section" id="video-queue-section" style="display: none;">
+                <h2 class="section-title">Video Queue (<span id="video-count">0</span>)</h2>
+                <div class="video-grid" id="video-grid">
+                    <!-- Video cards will be injected here -->
+                </div>
+            </section>
+        </main>
+        
+        <!-- Footer -->
+        <footer class="app-footer">
+            <div class="footer-content">
+                <a href="https://bros.ai" target="_blank" rel="noopener noreferrer" class="made-with-love">
+                    Made with <span class="heart" aria-label="love">❤️</span> by Bros AI
                 </a>
+                <div class="footer-links">
+                    <a href="https://github.com/Bros-AI" target="_blank" rel="noopener noreferrer" aria-label="Bros AI on GitHub"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a>
+                    <a href="https://x.com/GauthierBros" target="_blank" rel="noopener noreferrer" aria-label="Gauthier Bros on X (formerly Twitter)"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg></a>
+                    <a href="https://www.linkedin.com/in/gauthier-bros/" target="_blank" rel="noopener noreferrer" aria-label="Gauthier Bros on LinkedIn"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a>
+                </div>
             </div>
-        </div>
-
-        <div class="info-section">
-            <h4>ℹ️ About this converter</h4>
-            <p>This converter uses FFmpeg.wasm with a fix for the SharedArrayBuffer issue. It works in all modern browsers without requiring special server configuration.</p>
-            <ul>
-                <li>✅ No server upload required - all processing happens in your browser</li>
-                <li>✅ Supports video and audio conversion</li>
-                <li>✅ Works without SharedArrayBuffer</li>
-                <li>✅ Privacy-friendly - files never leave your device</li>
-            </ul>
-        </div>
+        </footer>
     </div>
 
-    <!-- Footer -->
-    <footer class="app-footer">
-        <div class="footer-content">
-            <a href="https://bros.ai" target="_blank" rel="noopener noreferrer" class="made-with-love">
-                Made with <span class="heart" aria-hidden="true">❤️</span> by Bros AI
-            </a>
-            <div class="footer-links">
-                <a href="https://github.com/Bros-AI" target="_blank" rel="noopener noreferrer" aria-label="Bros AI on GitHub">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                    </svg>
-                </a>
-                <a href="https://x.com/GauthierBros" target="_blank" rel="noopener noreferrer" aria-label="Gauthier Bros on X (formerly Twitter)">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                    </svg>
-                </a>
-            </div>
-        </div>
-    </footer>
+    <!-- Loading Overlay -->
+    <div class="loading-overlay" id="loading-overlay">
+        <div class="spinner"></div>
+        <p id="loading-text">Processing...</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
