--- a/index.html
+++ b/index.html
@@ -7,18 +7,8 @@
     <meta name="description" content="A blazing-fast, 100% client-side video converter using pure browser APIs. No dependencies, no uploads, instant loading. Convert to WebM/MP4, resize, and remove audio with zero compatibility issues.">
     <meta name="keywords" content="html5 video converter, browser video converter, convert video online, no upload video converter, webm converter, mp4 converter, remove audio from video, client-side video, bros ai">
     <link rel="canonical" href="https://bros-ai.github.io/video-optimizer-pro/">
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="HTML5 Video Converter - Fast, Private, In-Browser">
-    <meta property="og:description" content="A blazing-fast, 100% client-side video converter using pure browser APIs. No dependencies, no uploads, instant loading.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bros-ai.github.io/video-optimizer-pro/">
-    <meta property="og:site_name" content="HTML5 Video Converter">
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="HTML5 Video Converter - Fast, Private, In-Browser">
-    <meta name="twitter:description" content="A blazing-fast, 100% client-side video converter using pure browser APIs. No dependencies, no uploads, instant loading.">
-    <meta name="twitter:site" content="@GauthierBros">
-
+    <!-- JSZip for creating ZIP files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -50,27 +40,14 @@
             <!-- Controls & Actions Section -->
             <section class="controls-section card" id="controls-section" style="display: none;">
                 <div class="controls-grid">
-                    <!-- Dimensions Control -->
                     <div class="control-group">
                         <h3 class="control-title">Dimensions</h3>
                         <div class="input-group">
-                            <div class="input-field">
-                                <label for="width-input">Width (px)</label>
-                                <input type="number" id="width-input" min="1" placeholder="e.g., 1280">
-                            </div>
-                            <div class="input-field">
-                                <label for="height-input">Height (px)</label>
-                                <input type="number" id="height-input" min="1" placeholder="e.g., 720">
-                            </div>
+                            <div class="input-field"><label for="width-input">Width (px)</label><input type="number" id="width-input" min="1" placeholder="e.g., 1280"></div>
+                            <div class="input-field"><label for="height-input">Height (px)</label><input type="number" id="height-input" min="1" placeholder="e.g., 720"></div>
                         </div>
-                        <label class="checkbox-label">
-                            <input type="checkbox" id="maintain-aspect-ratio" checked>
-                            <span class="checkmark"></span>
-                            Maintain aspect ratio
-                        </label>
+                        <label class="checkbox-label"><input type="checkbox" id="maintain-aspect-ratio" checked><span class="checkmark"></span> Maintain aspect ratio</label>
                     </div>
-
-                    <!-- Quality & Format Control -->
                     <div class="control-group">
                         <h3 class="control-title">Encoding & Format</h3>
                         <div class="input-group">
@@ -92,17 +69,33 @@
                                 <small style="font-size: 0.75em; color: var(--secondary-color);">*MP4 support varies by browser</small>
                             </div>
                         </div>
-                         <label class="checkbox-label">
-                            <input type="checkbox" id="remove-audio">
-                            <span class="checkmark"></span>
-                            Remove audio
-                        </label>
+                         <label class="checkbox-label"><input type="checkbox" id="remove-audio"><span class="checkmark"></span> Remove audio</label>
                     </div>
                 </div>
-
-                <!-- Action Buttons -->
+                <div class="total-stats-section" id="total-stats-section" style="display: none;">
+                    <h3>Conversion Complete!</h3>
+                    <div class="stats-grid">
+                        <div class="stat-item"><span class="stat-label">Original Size</span><span class="stat-value" id="total-original-size">0 MB</span></div>
+                        <div class="stat-item"><span class="stat-label">New Size</span><span class="stat-value" id="total-new-size">0 MB</span></div>
+                        <div class="stat-item savings"><span class="stat-label">Total Savings</span><span class="stat-value" id="total-savings-percent">0%</span></div>
+                    </div>
+                    <div class="share-section">
+                        <p>Found this useful? Share it with your friends!</p>
+                        <div class="share-buttons">
+                            <a href="https://twitter.com/intent/tweet?text=I%20just%20used%20this%20awesome,%20free%20in-browser%20video%20converter!%20No%20uploads,%20100%25%20private.%20Check%20it%20out:&url=https://bros-ai.github.io/video-optimizer-pro/" target="_blank" class="share-btn twitter">
+                                <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                                Share on X
+                            </a>
+                            <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://bros-ai.github.io/video-optimizer-pro/" target="_blank" class="share-btn linkedin">
+                                <svg viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+                                Share on LinkedIn
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="action-buttons">
                     <button id="process-btn" class="btn btn-primary" disabled>Convert All Videos</button>
+                    <button id="download-zip-btn" class="btn btn-success" style="display: none;">Download All (.zip)</button>
                     <button id="reset-btn" class="btn btn-secondary">Reset</button>
                 </div>
                 <div id="error-message" class="error-message" role="alert"></div>
@@ -111,9 +104,7 @@
             <!-- Video Queue Section -->
             <section class="video-queue-section" id="video-queue-section" style="display: none;">
                 <h2 class="section-title">Video Queue (<span id="video-count">0</span>)</h2>
-                <div class="video-grid" id="video-grid">
-                    <!-- Video cards will be injected here -->
-                </div>
+                <div class="video-grid" id="video-grid"></div>
             </section>
         </main>
         
@@ -124,9 +115,9 @@
                     Made with <span class="heart" aria-label="love">❤️</span> by Bros AI
                 </a>
                 <div class="footer-links">
-                    <a href="https://github.com/Bros-AI" target="_blank" rel="noopener noreferrer" aria-label="Bros AI on GitHub"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a>
-                    <a href="https://x.com/GauthierBros" target="_blank" rel="noopener noreferrer" aria-label="Gauthier Bros on X (formerly Twitter)"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg></a>
-                    <a href="https://www.linkedin.com/in/gauthier-bros/" target="_blank" rel="noopener noreferrer" aria-label="Gauthier Bros on LinkedIn"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a>
+                    <a href="https://github.com/Bros-AI" target="_blank" rel="noopener noreferrer" aria-label="Bros AI on GitHub"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a>
+                    <a href="https://x.com/GauthierBros" target="_blank" rel="noopener noreferrer" aria-label="Gauthier Bros on X (formerly Twitter)"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg></a>
+                    <a href="https://www.linkedin.com/in/gauthier-bros/" target="_blank" rel="noopener noreferrer" aria-label="Gauthier Bros on LinkedIn"><svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a>
                 </div>
             </div>
         </footer>
@@ -134,8 +125,19 @@
 
     <!-- Loading Overlay -->
     <div class="loading-overlay" id="loading-overlay">
-        <div class="spinner"></div>
-        <p id="loading-text">Processing...</p>
+        <div class="loading-content">
+            <div class="spinner"></div>
+            <div class="author-chat-panel">
+                <img src="https://github.com/BrosG.png" alt="Photo of Gauthier Bros" class="author-avatar">
+                <div class="chat-bubble">
+                    <p>Hi! Gauthier here.</p>
+                    <p>While my digital robots are at work, just know that we're carefully re-drawing <strong>every single frame</strong> of your video to optimize it for the web. A little <strong>patience</strong> now will save you a ton of loading time later!</p>
+                    <p><strong>Have a project in mind or need a custom tool like this one?</strong> I'd love to hear about it. Feel free to contact me at <a href="mailto:gauthier@bros.ai">gauthier@bros.ai</a>.</p>
+                    <p class="ps-text">P.S. If you find this tool useful, press Ctrl+D or Cmd+D to bookmark it for later!</p>
+                </div>
+            </div>
+            <p class="main-progress-text" id="loading-text">Preparing files...</p>
+        </div>
     </div>
 
     <script src="script.js"></script>
